# Playlist-Generator

backend/: pyproject.toml
backend/backend/: access_token.py  main.py
backend/backend/endpoints/: filter.py  routers.py
backend/backend/schemas/: filters.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Footer.vue  Modal.vue  Search.vue
