[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SSewpaul <ssewpaul@scu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.0"
requests = "^2.31.0"
dotenv = "^0.0.5"
python-dotenv = "^1.0.0"
spotipy = "^2.23.0"
uvicorn = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
